back to commonjs lol

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/kevin-roark/frampton/issues"
   },
-  "homepage": "https://github.com/kevin-roark/frampton"
+  "homepage": "https://github.com/kevin-roark/frampton",
+  "dependencies": {
+    "ncp": "^2.0.0"
+  }
 }
