duration in config via ffprobe

--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   },
   "homepage": "https://github.com/kevin-roark/frampton",
   "dependencies": {
-    "ncp": "^2.0.0",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
-    "browserify": "^13.0.0"
+    "browserify": "^13.0.0",
+    "ncp": "^2.0.0",
+    "node-ffprobe": "^1.2.2"
   }
 }
