beginning of a schedule loop

--- a/examples/numbers_config.json
+++ b/examples/numbers_config.json
@@ -1,1 +1,34 @@
-{"path":"examples/numbers","videos":[{"filename":"1.mp4","duration":5.033333},{"filename":"3.mp4","duration":5.033333},{"filename":"10.mp4","duration":5.033333},{"filename":"4.mp4","duration":5.033333},{"filename":"6.mp4","duration":5.033333},{"filename":"5.mp4","duration":5.033333},{"filename":"2.mp4","duration":5.033333},{"filename":"7.mp4","duration":5.033333},{"filename":"8.mp4","duration":5.033333},{"filename":"9.mp4","duration":5.033333}]}
+{
+  "path": "examples/numbers",
+  "videos": [{
+    "filename": "1.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "3.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "10.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "4.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "6.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "5.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "2.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "7.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "8.mp4",
+    "duration": 5.033333
+  }, {
+    "filename": "9.mp4",
+    "duration": 5.033333
+  }]
+}
