--- a/examples/feud_config.json
+++ b/examples/feud_config.json
@@ -1,64 +1,217 @@
 {
   "path": "examples/feud",
   "videos": [{
-    "filename": "Feud20.mp4",
-    "duration": 1.935267
+    "filename": "Feud69.mp4",
+    "duration": 2.4056669999999998
   }, {
-    "filename": "Feud2.mp4",
-    "duration": 1.8018
+    "filename": "Feud68.mp4",
+    "duration": 1.8884830000000001
   }, {
-    "filename": "Feud19.mp4",
-    "duration": 1.968633
+    "filename": "Feud67.mp4",
+    "duration": 1.92185
   }, {
-    "filename": "Feud18.mp4",
-    "duration": 1.6016
+    "filename": "Feud66.mp4",
+    "duration": 2.605867
   }, {
-    "filename": "Feud17.mp4",
-    "duration": 1.868533
+    "filename": "Feud65.mp4",
+    "duration": 1.9719
   }, {
-    "filename": "Feud16.mp4",
-    "duration": 1.534867
+    "filename": "Feud64.mp4",
+    "duration": 2.155417
   }, {
-    "filename": "Feud15.mp4",
-    "duration": 2.002
+    "filename": "Feud63.mp4",
+    "duration": 1.8884830000000001
   }, {
-    "filename": "Feud14.mp4",
-    "duration": 1.968633
+    "filename": "Feud62.mp4",
+    "duration": 2.338933
   }, {
-    "filename": "Feud13.mp4",
-    "duration": 2.2022
+    "filename": "Feud61.mp4",
+    "duration": 2.705967
   }, {
-    "filename": "Feud12.mp4",
-    "duration": 2.3023
-  }, {
-    "filename": "Feud11.mp4",
-    "duration": 2.268933
-  }, {
-    "filename": "Feud10.mp4",
-    "duration": 2.168833
-  }, {
-    "filename": "Feud1.mp4",
-    "duration": 1.7017
-  }, {
-    "filename": "Feud4.mp4",
-    "duration": 1.7017
-  }, {
-    "filename": "Feud3.mp4",
-    "duration": 2.3023
-  }, {
-    "filename": "Feud7.mp4",
-    "duration": 1.935267
+    "filename": "Feud60.mp4",
+    "duration": 1.4714
   }, {
     "filename": "Feud6.mp4",
-    "duration": 1.668333
+    "duration": 1.7383330000000001
+  }, {
+    "filename": "Feud59.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Feud58.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud57.mp4",
+    "duration": 2.2388329999999996
+  }, {
+    "filename": "Feud56.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud55.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud54.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud53.mp4",
+    "duration": 1.7383330000000001
+  }, {
+    "filename": "Feud52.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud51.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud50.mp4",
+    "duration": 1.838433
   }, {
     "filename": "Feud5.mp4",
-    "duration": 2.035367
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud49.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud48.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud47.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Feud46.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud45.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud44.mp4",
+    "duration": 2.1387329999999998
+  }, {
+    "filename": "Feud43.mp4",
+    "duration": 2.1387329999999998
+  }, {
+    "filename": "Feud42.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud41.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud40.mp4",
+    "duration": 1.938533
+  }, {
+    "filename": "Feud4.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Feud39.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud38.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud37.mp4",
+    "duration": 2.305567
+  }, {
+    "filename": "Feud36.mp4",
+    "duration": 2.9895829999999997
+  }, {
+    "filename": "Feud35.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud34.mp4",
+    "duration": 1.688283
+  }, {
+    "filename": "Feud33.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Feud32.mp4",
+    "duration": 2.8227499999999996
+  }, {
+    "filename": "Feud31.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud30.mp4",
+    "duration": 2.605867
+  }, {
+    "filename": "Feud3.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Feud29.mp4",
+    "duration": 1.988583
+  }, {
+    "filename": "Feud28.mp4",
+    "duration": 1.7216500000000001
+  }, {
+    "filename": "Feud27.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud26.mp4",
+    "duration": 1.755017
+  }, {
+    "filename": "Feud25.mp4",
+    "duration": 2.155417
+  }, {
+    "filename": "Feud24.mp4",
+    "duration": 1.7049670000000001
+  }, {
+    "filename": "Feud23.mp4",
+    "duration": 2.906167
+  }, {
+    "filename": "Feud22.mp4",
+    "duration": 2.2221499999999996
+  }, {
+    "filename": "Feud21.mp4",
+    "duration": 1.8718000000000001
+  }, {
+    "filename": "Feud20.mp4",
+    "duration": 2.005267
+  }, {
+    "filename": "Feud2.mp4",
+    "duration": 1.8718000000000001
+  }, {
+    "filename": "Feud19.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud18.mp4",
+    "duration": 1.6716
+  }, {
+    "filename": "Feud17.mp4",
+    "duration": 1.938533
+  }, {
+    "filename": "Feud16.mp4",
+    "duration": 1.604867
+  }, {
+    "filename": "Feud15.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud14.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud13.mp4",
+    "duration": 2.2721999999999998
+  }, {
+    "filename": "Feud12.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Feud11.mp4",
+    "duration": 2.338933
+  }, {
+    "filename": "Feud10.mp4",
+    "duration": 2.2388329999999996
+  }, {
+    "filename": "Feud1.mp4",
+    "duration": 1.7717
   }, {
     "filename": "Feud8.mp4",
-    "duration": 2.068733
+    "duration": 2.1387329999999998
   }, {
-    "filename": "Feud9.mp4",
-    "duration": 2.6026
+    "filename": "Feud71.mp4",
+    "duration": 2.005267
+  }, {
+    "filename": "Feud72.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud70.mp4",
+    "duration": 2.5391329999999996
+  }, {
+    "filename": "Feud7.mp4",
+    "duration": 2.005267
   }]
 }
