--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "jsonfile": "^2.2.3",
     "ncp": "^2.0.0",
     "node-ffprobe": "^1.2.2"
   }
