--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "browserify": "^13.0.0",
     "jsonfile": "^2.2.3",
     "ncp": "^2.0.0",
-    "node-ffprobe": "^1.2.2"
+    "node-ffprobe": "^1.2.2",
+    "uglifyify": "^3.0.1"
   }
 }
