--- a/examples/mixed_up_feud_config.json
+++ b/examples/mixed_up_feud_config.json
@@ -1,1 +1,292 @@
-{"path":"examples/mixed-up-feud/","videos":[{"filename":"Feud67.mp4","duration":1.92185},{"filename":"Feud66.mp4","duration":2.605867},{"filename":"Feud65.mp4","duration":1.9719},{"filename":"Feud64.mp4","duration":2.155417},{"filename":"Feud63.mp4","duration":1.8884830000000001},{"filename":"Feud62.mp4","duration":2.338933},{"filename":"Feud61.mp4","duration":2.705967},{"filename":"Feud60.mp4","duration":1.4714},{"filename":"Feud6.mp4","duration":1.7383330000000001},{"filename":"Feud59.mp4","duration":1.7717},{"filename":"Feud58.mp4","duration":2.0719999999999996},{"filename":"Feud57.mp4","duration":2.2388329999999996},{"filename":"Feud56.mp4","duration":2.1053669999999998},{"filename":"Feud55.mp4","duration":2.0719999999999996},{"filename":"Feud54.mp4","duration":1.805067},{"filename":"Feud53.mp4","duration":1.7383330000000001},{"filename":"Feud52.mp4","duration":2.1053669999999998},{"filename":"Feud51.mp4","duration":2.0719999999999996},{"filename":"Feud50.mp4","duration":1.838433},{"filename":"Feud5.mp4","duration":2.1053669999999998},{"filename":"Feud49.mp4","duration":2.038633},{"filename":"Feud48.mp4","duration":1.9719},{"filename":"Feud47.mp4","duration":1.7717},{"filename":"Feud46.mp4","duration":1.805067},{"filename":"Feud45.mp4","duration":2.038633},{"filename":"Feud44.mp4","duration":2.1387329999999998},{"filename":"Feud43.mp4","duration":2.1387329999999998},{"filename":"Feud42.mp4","duration":1.9719},{"filename":"Feud41.mp4","duration":1.9719},{"filename":"Feud40.mp4","duration":1.938533},{"filename":"Feud4.mp4","duration":1.7717},{"filename":"Feud39.mp4","duration":1.9719},{"filename":"Feud38.mp4","duration":1.805067},{"filename":"Feud37.mp4","duration":2.305567},{"filename":"Feud36.mp4","duration":2.9895829999999997},{"filename":"Feud35.mp4","duration":1.805067},{"filename":"Feud34.mp4","duration":1.688283},{"filename":"Feud33.mp4","duration":2.3722999999999996},{"filename":"Feud32.mp4","duration":2.8227499999999996},{"filename":"Feud31.mp4","duration":1.9719},{"filename":"Feud30.mp4","duration":2.605867},{"filename":"Feud3.mp4","duration":2.3722999999999996},{"filename":"Feud29.mp4","duration":1.988583},{"filename":"Feud28.mp4","duration":1.7216500000000001},{"filename":"Feud27.mp4","duration":1.9719},{"filename":"Feud26.mp4","duration":1.755017},{"filename":"Feud25.mp4","duration":2.155417},{"filename":"Feud24.mp4","duration":1.7049670000000001},{"filename":"Feud23.mp4","duration":2.906167},{"filename":"Feud22.mp4","duration":2.2221499999999996},{"filename":"Feud21.mp4","duration":1.8718000000000001},{"filename":"Feud20.mp4","duration":2.005267},{"filename":"Feud2.mp4","duration":1.8718000000000001},{"filename":"Feud19.mp4","duration":2.038633},{"filename":"Feud18.mp4","duration":1.6716},{"filename":"Feud17.mp4","duration":1.938533},{"filename":"Feud16.mp4","duration":1.604867},{"filename":"Feud15.mp4","duration":2.0719999999999996},{"filename":"Feud14.mp4","duration":2.038633},{"filename":"Feud13.mp4","duration":2.2721999999999998},{"filename":"Feud12.mp4","duration":2.3722999999999996},{"filename":"Feud11.mp4","duration":2.338933},{"filename":"Feud10.mp4","duration":2.2388329999999996},{"filename":"Feud1.mp4","duration":1.7717},{"filename":"Ding9.mp4","duration":2.3722999999999996},{"filename":"Ding8.mp4","duration":2.906167},{"filename":"Ding7.mp4","duration":6.643233},{"filename":"Ding6.mp4","duration":3.4400329999999997},{"filename":"Ding5.mp4","duration":3.506767},{"filename":"Ding4.mp4","duration":2.6725999999999996},{"filename":"Ding3.mp4","duration":4.4744},{"filename":"Ding25.mp4","duration":3.306567},{"filename":"Ding24.mp4","duration":3.2731999999999997},{"filename":"Ding23.mp4","duration":3.7403329999999997},{"filename":"Ding22.mp4","duration":3.907167},{"filename":"Ding21.mp4","duration":4.507767},{"filename":"Ding20.mp4","duration":2.8728},{"filename":"Ding2.mp4","duration":3.5734999999999997},{"filename":"Ding19.mp4","duration":3.3733},{"filename":"Ding18.mp4","duration":4.207467},{"filename":"Ding17.mp4","duration":2.0719999999999996},{"filename":"Ding16.mp4","duration":2.2054669999999996},{"filename":"Ding15.mp4","duration":2.7727},{"filename":"Ding14.mp4","duration":2.7727},{"filename":"Ding13.mp4","duration":4.107367},{"filename":"Ding12.mp4","duration":3.1063669999999997},{"filename":"Ding11.mp4","duration":5.3753},{"filename":"Ding10.mp4","duration":2.7727},{"filename":"Ding1.mp4","duration":3.6736},{"filename":"Feud72.mp4","duration":2.1053669999999998},{"filename":"Feud8.mp4","duration":2.1387329999999998},{"filename":"Feud71.mp4","duration":2.005267},{"filename":"Feud70.mp4","duration":2.5391329999999996},{"filename":"Feud7.mp4","duration":2.005267},{"filename":"Feud68.mp4","duration":1.8884830000000001},{"filename":"Feud69.mp4","duration":2.4056669999999998}]}
+{
+  "path": "examples/mixed-up-feud/",
+  "videos": [{
+    "filename": "Feud67.mp4",
+    "duration": 1.92185
+  }, {
+    "filename": "Feud66.mp4",
+    "duration": 2.605867
+  }, {
+    "filename": "Feud65.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud64.mp4",
+    "duration": 2.155417
+  }, {
+    "filename": "Feud63.mp4",
+    "duration": 1.8884830000000001
+  }, {
+    "filename": "Feud62.mp4",
+    "duration": 2.338933
+  }, {
+    "filename": "Feud61.mp4",
+    "duration": 2.705967
+  }, {
+    "filename": "Feud60.mp4",
+    "duration": 1.4714
+  }, {
+    "filename": "Feud6.mp4",
+    "duration": 1.7383330000000001
+  }, {
+    "filename": "Feud59.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Feud58.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud57.mp4",
+    "duration": 2.2388329999999996
+  }, {
+    "filename": "Feud56.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud55.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud54.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud53.mp4",
+    "duration": 1.7383330000000001
+  }, {
+    "filename": "Feud52.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud51.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud50.mp4",
+    "duration": 1.838433
+  }, {
+    "filename": "Feud5.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud49.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud48.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud47.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Feud46.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud45.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud44.mp4",
+    "duration": 2.1387329999999998
+  }, {
+    "filename": "Feud43.mp4",
+    "duration": 2.1387329999999998
+  }, {
+    "filename": "Feud42.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud41.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud40.mp4",
+    "duration": 1.938533
+  }, {
+    "filename": "Feud4.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Feud39.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud38.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud37.mp4",
+    "duration": 2.305567
+  }, {
+    "filename": "Feud36.mp4",
+    "duration": 2.9895829999999997
+  }, {
+    "filename": "Feud35.mp4",
+    "duration": 1.805067
+  }, {
+    "filename": "Feud34.mp4",
+    "duration": 1.688283
+  }, {
+    "filename": "Feud33.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Feud32.mp4",
+    "duration": 2.8227499999999996
+  }, {
+    "filename": "Feud31.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud30.mp4",
+    "duration": 2.605867
+  }, {
+    "filename": "Feud3.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Feud29.mp4",
+    "duration": 1.988583
+  }, {
+    "filename": "Feud28.mp4",
+    "duration": 1.7216500000000001
+  }, {
+    "filename": "Feud27.mp4",
+    "duration": 1.9719
+  }, {
+    "filename": "Feud26.mp4",
+    "duration": 1.755017
+  }, {
+    "filename": "Feud25.mp4",
+    "duration": 2.155417
+  }, {
+    "filename": "Feud24.mp4",
+    "duration": 1.7049670000000001
+  }, {
+    "filename": "Feud23.mp4",
+    "duration": 2.906167
+  }, {
+    "filename": "Feud22.mp4",
+    "duration": 2.2221499999999996
+  }, {
+    "filename": "Feud21.mp4",
+    "duration": 1.8718000000000001
+  }, {
+    "filename": "Feud20.mp4",
+    "duration": 2.005267
+  }, {
+    "filename": "Feud2.mp4",
+    "duration": 1.8718000000000001
+  }, {
+    "filename": "Feud19.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud18.mp4",
+    "duration": 1.6716
+  }, {
+    "filename": "Feud17.mp4",
+    "duration": 1.938533
+  }, {
+    "filename": "Feud16.mp4",
+    "duration": 1.604867
+  }, {
+    "filename": "Feud15.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Feud14.mp4",
+    "duration": 2.038633
+  }, {
+    "filename": "Feud13.mp4",
+    "duration": 2.2721999999999998
+  }, {
+    "filename": "Feud12.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Feud11.mp4",
+    "duration": 2.338933
+  }, {
+    "filename": "Feud10.mp4",
+    "duration": 2.2388329999999996
+  }, {
+    "filename": "Feud1.mp4",
+    "duration": 1.7717
+  }, {
+    "filename": "Ding9.mp4",
+    "duration": 2.3722999999999996
+  }, {
+    "filename": "Ding8.mp4",
+    "duration": 2.906167
+  }, {
+    "filename": "Ding7.mp4",
+    "duration": 6.643233
+  }, {
+    "filename": "Ding6.mp4",
+    "duration": 3.4400329999999997
+  }, {
+    "filename": "Ding5.mp4",
+    "duration": 3.506767
+  }, {
+    "filename": "Ding4.mp4",
+    "duration": 2.6725999999999996
+  }, {
+    "filename": "Ding3.mp4",
+    "duration": 4.4744
+  }, {
+    "filename": "Ding25.mp4",
+    "duration": 3.306567
+  }, {
+    "filename": "Ding24.mp4",
+    "duration": 3.2731999999999997
+  }, {
+    "filename": "Ding23.mp4",
+    "duration": 3.7403329999999997
+  }, {
+    "filename": "Ding22.mp4",
+    "duration": 3.907167
+  }, {
+    "filename": "Ding21.mp4",
+    "duration": 4.507767
+  }, {
+    "filename": "Ding20.mp4",
+    "duration": 2.8728
+  }, {
+    "filename": "Ding2.mp4",
+    "duration": 3.5734999999999997
+  }, {
+    "filename": "Ding19.mp4",
+    "duration": 3.3733
+  }, {
+    "filename": "Ding18.mp4",
+    "duration": 4.207467
+  }, {
+    "filename": "Ding17.mp4",
+    "duration": 2.0719999999999996
+  }, {
+    "filename": "Ding16.mp4",
+    "duration": 2.2054669999999996
+  }, {
+    "filename": "Ding15.mp4",
+    "duration": 2.7727
+  }, {
+    "filename": "Ding14.mp4",
+    "duration": 2.7727
+  }, {
+    "filename": "Ding13.mp4",
+    "duration": 4.107367
+  }, {
+    "filename": "Ding12.mp4",
+    "duration": 3.1063669999999997
+  }, {
+    "filename": "Ding11.mp4",
+    "duration": 5.3753
+  }, {
+    "filename": "Ding10.mp4",
+    "duration": 2.7727
+  }, {
+    "filename": "Ding1.mp4",
+    "duration": 3.6736
+  }, {
+    "filename": "Feud72.mp4",
+    "duration": 2.1053669999999998
+  }, {
+    "filename": "Feud8.mp4",
+    "duration": 2.1387329999999998
+  }, {
+    "filename": "Feud71.mp4",
+    "duration": 2.005267
+  }, {
+    "filename": "Feud70.mp4",
+    "duration": 2.5391329999999996
+  }, {
+    "filename": "Feud7.mp4",
+    "duration": 2.005267
+  }, {
+    "filename": "Feud68.mp4",
+    "duration": 1.8884830000000001
+  }, {
+    "filename": "Feud69.mp4",
+    "duration": 2.4056669999999998
+  }]
+}
