--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonfile": "^2.2.3",
     "ncp": "^2.0.0",
     "node-ffprobe": "^1.2.2",
+    "subtitle": "^0.1.1",
     "uglifyify": "^3.0.1"
   }
 }
