mediainfo for dead-ass accurate duration in config

--- a/examples/feud_config.json
+++ b/examples/feud_config.json
@@ -1,217 +1,352 @@
 {
-  "path": "examples/feud",
+  "path": "../feud/family-feud-online-gimme/media",
   "videos": [{
-    "filename": "Feud69.mp4",
-    "duration": 2.4056669999999998
-  }, {
-    "filename": "Feud68.mp4",
-    "duration": 1.8884830000000001
-  }, {
-    "filename": "Feud67.mp4",
-    "duration": 1.92185
-  }, {
-    "filename": "Feud66.mp4",
-    "duration": 2.605867
-  }, {
-    "filename": "Feud65.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud64.mp4",
-    "duration": 2.155417
-  }, {
-    "filename": "Feud63.mp4",
-    "duration": 1.8884830000000001
-  }, {
-    "filename": "Feud62.mp4",
-    "duration": 2.338933
-  }, {
-    "filename": "Feud61.mp4",
-    "duration": 2.705967
-  }, {
-    "filename": "Feud60.mp4",
-    "duration": 1.4714
-  }, {
-    "filename": "Feud6.mp4",
-    "duration": 1.7383330000000001
-  }, {
-    "filename": "Feud59.mp4",
-    "duration": 1.7717
-  }, {
-    "filename": "Feud58.mp4",
-    "duration": 2.0719999999999996
-  }, {
-    "filename": "Feud57.mp4",
-    "duration": 2.2388329999999996
-  }, {
-    "filename": "Feud56.mp4",
-    "duration": 2.1053669999999998
-  }, {
-    "filename": "Feud55.mp4",
-    "duration": 2.0719999999999996
-  }, {
-    "filename": "Feud54.mp4",
-    "duration": 1.805067
-  }, {
-    "filename": "Feud53.mp4",
-    "duration": 1.7383330000000001
-  }, {
-    "filename": "Feud52.mp4",
-    "duration": 2.1053669999999998
-  }, {
-    "filename": "Feud51.mp4",
-    "duration": 2.0719999999999996
-  }, {
-    "filename": "Feud50.mp4",
-    "duration": 1.838433
-  }, {
-    "filename": "Feud5.mp4",
-    "duration": 2.1053669999999998
-  }, {
-    "filename": "Feud49.mp4",
-    "duration": 2.038633
-  }, {
-    "filename": "Feud48.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud47.mp4",
-    "duration": 1.7717
-  }, {
-    "filename": "Feud46.mp4",
-    "duration": 1.805067
-  }, {
-    "filename": "Feud45.mp4",
-    "duration": 2.038633
-  }, {
-    "filename": "Feud44.mp4",
-    "duration": 2.1387329999999998
-  }, {
-    "filename": "Feud43.mp4",
-    "duration": 2.1387329999999998
-  }, {
-    "filename": "Feud42.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud41.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud40.mp4",
-    "duration": 1.938533
-  }, {
-    "filename": "Feud4.mp4",
-    "duration": 1.7717
-  }, {
-    "filename": "Feud39.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud38.mp4",
-    "duration": 1.805067
-  }, {
-    "filename": "Feud37.mp4",
-    "duration": 2.305567
-  }, {
-    "filename": "Feud36.mp4",
-    "duration": 2.9895829999999997
-  }, {
-    "filename": "Feud35.mp4",
-    "duration": 1.805067
-  }, {
-    "filename": "Feud34.mp4",
-    "duration": 1.688283
-  }, {
-    "filename": "Feud33.mp4",
-    "duration": 2.3722999999999996
-  }, {
-    "filename": "Feud32.mp4",
-    "duration": 2.8227499999999996
-  }, {
-    "filename": "Feud31.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud30.mp4",
-    "duration": 2.605867
-  }, {
-    "filename": "Feud3.mp4",
-    "duration": 2.3722999999999996
-  }, {
-    "filename": "Feud29.mp4",
-    "duration": 1.988583
-  }, {
-    "filename": "Feud28.mp4",
-    "duration": 1.7216500000000001
-  }, {
-    "filename": "Feud27.mp4",
-    "duration": 1.9719
-  }, {
-    "filename": "Feud26.mp4",
-    "duration": 1.755017
-  }, {
-    "filename": "Feud25.mp4",
-    "duration": 2.155417
-  }, {
-    "filename": "Feud24.mp4",
-    "duration": 1.7049670000000001
-  }, {
-    "filename": "Feud23.mp4",
-    "duration": 2.906167
-  }, {
-    "filename": "Feud22.mp4",
-    "duration": 2.2221499999999996
-  }, {
-    "filename": "Feud21.mp4",
-    "duration": 1.8718000000000001
-  }, {
-    "filename": "Feud20.mp4",
-    "duration": 2.005267
-  }, {
-    "filename": "Feud2.mp4",
-    "duration": 1.8718000000000001
-  }, {
-    "filename": "Feud19.mp4",
-    "duration": 2.038633
-  }, {
-    "filename": "Feud18.mp4",
-    "duration": 1.6716
-  }, {
-    "filename": "Feud17.mp4",
-    "duration": 1.938533
-  }, {
-    "filename": "Feud16.mp4",
-    "duration": 1.604867
-  }, {
-    "filename": "Feud15.mp4",
-    "duration": 2.0719999999999996
-  }, {
-    "filename": "Feud14.mp4",
-    "duration": 2.038633
-  }, {
-    "filename": "Feud13.mp4",
-    "duration": 2.2721999999999998
-  }, {
-    "filename": "Feud12.mp4",
-    "duration": 2.3722999999999996
-  }, {
-    "filename": "Feud11.mp4",
-    "duration": 2.338933
+    "filename": "Feud1.mp4",
+    "duration": 1.826,
+    "tags": []
   }, {
     "filename": "Feud10.mp4",
-    "duration": 2.2388329999999996
+    "duration": 2.295,
+    "tags": []
   }, {
-    "filename": "Feud1.mp4",
-    "duration": 1.7717
+    "filename": "Feud11.mp4",
+    "duration": 2.38,
+    "tags": []
   }, {
-    "filename": "Feud8.mp4",
-    "duration": 2.1387329999999998
+    "filename": "Feud12.mp4",
+    "duration": 2.423,
+    "tags": []
   }, {
-    "filename": "Feud71.mp4",
-    "duration": 2.005267
+    "filename": "Feud13.mp4",
+    "duration": 2.316,
+    "tags": []
   }, {
-    "filename": "Feud72.mp4",
-    "duration": 2.1053669999999998
+    "filename": "Feud14.mp4",
+    "duration": 2.082,
+    "tags": []
   }, {
-    "filename": "Feud70.mp4",
-    "duration": 2.5391329999999996
+    "filename": "Feud15.mp4",
+    "duration": 2.124,
+    "tags": []
+  }, {
+    "filename": "Feud16.mp4",
+    "duration": 1.655,
+    "tags": []
+  }, {
+    "filename": "Feud17.mp4",
+    "duration": 1.996,
+    "tags": []
+  }, {
+    "filename": "Feud18.mp4",
+    "duration": 1.719,
+    "tags": []
+  }, {
+    "filename": "Feud19.mp4",
+    "duration": 2.082,
+    "tags": []
+  }, {
+    "filename": "Feud2.mp4",
+    "duration": 1.932,
+    "tags": []
+  }, {
+    "filename": "Feud20.mp4",
+    "duration": 2.06,
+    "tags": []
+  }, {
+    "filename": "Feud21.mp4",
+    "duration": 1.932,
+    "tags": []
+  }, {
+    "filename": "Feud22.mp4",
+    "duration": 2.274,
+    "tags": []
+  }, {
+    "filename": "Feud23.mp4",
+    "duration": 2.956,
+    "tags": []
+  }, {
+    "filename": "Feud24.mp4",
+    "duration": 1.762,
+    "tags": []
+  }, {
+    "filename": "Feud25.mp4",
+    "duration": 2.21,
+    "tags": []
+  }, {
+    "filename": "Feud26.mp4",
+    "duration": 1.804,
+    "tags": []
+  }, {
+    "filename": "Feud27.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud28.mp4",
+    "duration": 1.762,
+    "tags": []
+  }, {
+    "filename": "Feud29.mp4",
+    "duration": 2.039,
+    "tags": []
+  }, {
+    "filename": "Feud3.mp4",
+    "duration": 2.423,
+    "tags": []
+  }, {
+    "filename": "Feud30.mp4",
+    "duration": 2.658,
+    "tags": []
+  }, {
+    "filename": "Feud31.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud32.mp4",
+    "duration": 2.871,
+    "tags": []
+  }, {
+    "filename": "Feud33.mp4",
+    "duration": 2.423,
+    "tags": []
+  }, {
+    "filename": "Feud34.mp4",
+    "duration": 1.74,
+    "tags": []
+  }, {
+    "filename": "Feud35.mp4",
+    "duration": 1.847,
+    "tags": []
+  }, {
+    "filename": "Feud36.mp4",
+    "duration": 3.042,
+    "tags": []
+  }, {
+    "filename": "Feud37.mp4",
+    "duration": 2.359,
+    "tags": []
+  }, {
+    "filename": "Feud38.mp4",
+    "duration": 1.847,
+    "tags": []
+  }, {
+    "filename": "Feud39.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud4.mp4",
+    "duration": 1.826,
+    "tags": []
+  }, {
+    "filename": "Feud40.mp4",
+    "duration": 1.996,
+    "tags": []
+  }, {
+    "filename": "Feud41.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud42.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud43.mp4",
+    "duration": 2.188,
+    "tags": []
+  }, {
+    "filename": "Feud44.mp4",
+    "duration": 2.188,
+    "tags": []
+  }, {
+    "filename": "Feud45.mp4",
+    "duration": 2.082,
+    "tags": []
+  }, {
+    "filename": "Feud46.mp4",
+    "duration": 1.847,
+    "tags": []
+  }, {
+    "filename": "Feud47.mp4",
+    "duration": 1.826,
+    "tags": []
+  }, {
+    "filename": "Feud48.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud49.mp4",
+    "duration": 2.082,
+    "tags": []
+  }, {
+    "filename": "Feud5.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud50.mp4",
+    "duration": 1.89,
+    "tags": []
+  }, {
+    "filename": "Feud51.mp4",
+    "duration": 2.124,
+    "tags": []
+  }, {
+    "filename": "Feud52.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud53.mp4",
+    "duration": 1.783,
+    "tags": []
+  }, {
+    "filename": "Feud54.mp4",
+    "duration": 1.847,
+    "tags": []
+  }, {
+    "filename": "Feud55.mp4",
+    "duration": 2.124,
+    "tags": []
+  }, {
+    "filename": "Feud56.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud57.mp4",
+    "duration": 2.295,
+    "tags": []
+  }, {
+    "filename": "Feud58.mp4",
+    "duration": 2.124,
+    "tags": []
+  }, {
+    "filename": "Feud59.mp4",
+    "duration": 1.826,
+    "tags": []
+  }, {
+    "filename": "Feud6.mp4",
+    "duration": 1.783,
+    "tags": []
+  }, {
+    "filename": "Feud60.mp4",
+    "duration": 1.527,
+    "tags": []
+  }, {
+    "filename": "Feud61.mp4",
+    "duration": 2.764,
+    "tags": []
+  }, {
+    "filename": "Feud62.mp4",
+    "duration": 2.38,
+    "tags": []
+  }, {
+    "filename": "Feud63.mp4",
+    "duration": 1.932,
+    "tags": []
+  }, {
+    "filename": "Feud64.mp4",
+    "duration": 2.21,
+    "tags": []
+  }, {
+    "filename": "Feud65.mp4",
+    "duration": 2.018,
+    "tags": []
+  }, {
+    "filename": "Feud66.mp4",
+    "duration": 2.658,
+    "tags": []
+  }, {
+    "filename": "Feud67.mp4",
+    "duration": 1.975,
+    "tags": []
+  }, {
+    "filename": "Feud68.mp4",
+    "duration": 1.932,
+    "tags": []
+  }, {
+    "filename": "Feud69.mp4",
+    "duration": 2.466,
+    "tags": []
   }, {
     "filename": "Feud7.mp4",
-    "duration": 2.005267
+    "duration": 2.06,
+    "tags": []
+  }, {
+    "filename": "Feud70.mp4",
+    "duration": 2.594,
+    "tags": []
+  }, {
+    "filename": "Feud71.mp4",
+    "duration": 2.06,
+    "tags": []
+  }, {
+    "filename": "Feud72.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud73.mp4",
+    "duration": 2.21,
+    "tags": []
+  }, {
+    "filename": "Feud74.mp4",
+    "duration": 1.676,
+    "tags": []
+  }, {
+    "filename": "Feud75.mp4",
+    "duration": 1.698,
+    "tags": []
+  }, {
+    "filename": "Feud76.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud77.mp4",
+    "duration": 1.868,
+    "tags": []
+  }, {
+    "filename": "Feud78.mp4",
+    "duration": 2.252,
+    "tags": []
+  }, {
+    "filename": "Feud79.mp4",
+    "duration": 2.21,
+    "tags": []
+  }, {
+    "filename": "Feud8.mp4",
+    "duration": 2.188,
+    "tags": []
+  }, {
+    "filename": "Feud80.mp4",
+    "duration": 1.804,
+    "tags": []
+  }, {
+    "filename": "Feud81.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud82.mp4",
+    "duration": 2.466,
+    "tags": []
+  }, {
+    "filename": "Feud83.mp4",
+    "duration": 2.316,
+    "tags": []
+  }, {
+    "filename": "Feud84.mp4",
+    "duration": 2.082,
+    "tags": []
+  }, {
+    "filename": "Feud85.mp4",
+    "duration": 2.082,
+    "tags": []
+  }, {
+    "filename": "Feud86.mp4",
+    "duration": 2.146,
+    "tags": []
+  }, {
+    "filename": "Feud87.mp4",
+    "duration": 1.89,
+    "tags": []
+  }, {
+    "filename": "Feud88.mp4",
+    "duration": 1.804,
+    "tags": []
   }]
 }
