--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "color-thief": "^2.2.1",
     "jsonfile": "^2.2.3",
     "ncp": "^2.0.0",
     "node-ffprobe": "^1.2.2",
+    "rimraf": "^2.5.2",
     "subtitle": "^0.1.1",
     "tween.js": "^16.3.4",
     "uglifyify": "^3.0.1"
