--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "color-thief": "^2.2.1",
+    "csvtojson": "^0.5.3",
     "jsonfile": "^2.2.3",
     "ncp": "^2.0.0",
     "node-ffprobe": "^1.2.2",
