--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rimraf": "^2.5.2",
     "string-natural-compare": "^1.1.1",
     "subtitle": "^0.1.1",
+    "three": "^0.76.1",
     "tween.js": "^16.3.4",
     "uglifyify": "^3.0.1"
   }
