--- a/package.json
+++ b/package.json
@@ -34,5 +34,12 @@
     "three": "0.76.1",
     "tween.js": "^16.3.4",
     "uglifyify": "^3.0.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^6.0.4",
+    "eslint": "^2.11.1",
+    "eslint-config-standard": "5.1.0",
+    "eslint-plugin-promise": "1.0.8",
+    "eslint-plugin-standard": "1.3.2"
   }
 }
