--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,9 @@
     "no-extra-semi": 2,
     "semi-spacing": [2, { "before": false, "after": true }],
     "no-shadow": [2, {"builtinGlobals": true, "hoist": "functions"}]
+  },
+  "globals": {
+    "frampton": true,
+    "mediaConfig": true
   }
 }
