--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     "spaced-comment": ["error", "always", { "markers": ["/"] }],
     "no-extra-semi": 2,
     "semi-spacing": [2, { "before": false, "after": true }],
-    "no-shadow": [2, {"builtinGlobals": true, "hoist": "functions"}]
+    "no-shadow": [2, {"builtinGlobals": true, "hoist": "functions"}],
+    "arrow-parens": ["error", "as-needed"]
   },
   "globals": {
     "frampton": true,
